syntax = "proto3";

package kyve.oracle.host.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/KYVENetwork/chain/x/oracle/host/types";

// Params ...
message Params {
  // price_per_byte ...
  string price_per_byte = 1 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

// OracleAcknowledgement ...
message OracleAcknowledgement {
  // oracle_response ...
  bytes oracle_response = 1;
  // timestamp ...
  google.protobuf.Timestamp timestamp = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
}

// OracleMemo ...
message OracleMemo {
  // query ...
  OracleQuery query = 1;
}

// OracleQuery ...
message OracleQuery {
  // query ...
  oneof query {
    // latest_summary ...
    LatestSummaryQuery latest_summary = 1;
  }
}

// LatestSummaryQuery ...
message LatestSummaryQuery {
  // pool_id ...
  uint64 pool_id = 1;
}
